--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -22,8 +22,8 @@
 				</mat-card-subtitle>
 				<mat-card-subtitle *ngIf="emergencyCareEpisodeInProgress">
 					<div class="label-episodes label-emergency-care-episode">
-						<strong class="uppercase"
-							[translate]="'ambulatoria.paciente.card.EMERGENCY_CARE_EPISODE_ACTIVE'"></strong>
+						<span class="uppercase"
+							[translate]="'ambulatoria.paciente.card.EMERGENCY_CARE_EPISODE_ACTIVE'"></span>
 					</div>
 				</mat-card-subtitle>
 			</mat-card-header>
