--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/personal-information/personal-information.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/personal-information/personal-information.component.html
@@ -1,7 +1,7 @@
 <ng-template #noInformation>
 	<span class="noInformation">Sin Información</span>
 </ng-template>
-<div *ngIf="showButtonGoToMedicalHistory">
+<div fxLayout="row" class="form-row" *ngIf="showButtonGoToMedicalHistory">
 	<button  *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']" mat-raised-button color="primary" (click)="buttonIsPressedGoToMedicalHistory()">
 		<span class="uppercase" [translate]="'ambulatoria.paciente.profile.BUTTON_HISTORIA_CLINICA'"></span>
 	</button>
