tg-6752 [FE] Agrega al archivo de traducciones de indicaciones lo especificado para dietas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
@@ -5,7 +5,7 @@
 				  [menu]="!epicrisisConfirmed" [matMenu]="menu">
 		<mat-menu #menu="matMenu">
 		<button mat-menu-item (click)="openDietDialog()">
-		  <span>{{'ambulatoria.dialog-title.DIET' | translate }}</span>
+		  <span>{{'indicacion.internment-card.menu-items.DIET' | translate }}</span>
 		</button>
 		</mat-menu>
 		<div class="content" fxLayout="row" fxLayoutAlign="left center" fxLayoutGap="10px">
