--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -28,10 +28,21 @@
 				sectionImportance="ambulatoria.paciente.nueva-consulta.RECOMENDADO">
 
 				<ng-container concept-form>
-					<app-concepts-search *ngIf="!motivoNuevaConsultaService.getSnomedConcept() else mainMotivoConsulta"
-						[label]="'ambulatoria.paciente.nueva-consulta.motivo.MOTIVO'"
-						(search)="motivoNuevaConsultaService.openSearchDialog($event)">
-					</app-concepts-search>
+					<ng-container *ngIf="!motivoNuevaConsultaService.getSnomedConcept() else mainMotivoConsulta">
+						<app-concepts-search
+							*ngIf="!searchConceptsLocallyFFIsOn else motivoTypeaheadSearch"
+							[label]="'ambulatoria.paciente.nueva-consulta.motivo.MOTIVO'"
+							(search)="motivoNuevaConsultaService.openSearchDialog($event)">
+						</app-concepts-search>
+
+						<ng-template #motivoTypeaheadSearch>
+							<app-concept-typeahead-search
+								[ecl]="motivoNuevaConsultaService.getECL()"
+								[placeholder]="'ambulatoria.paciente.nueva-consulta.motivo.SEARCH_PLACEHOLDER'"
+								(conceptSelected)="motivoNuevaConsultaService.setConcept($event)">
+							</app-concept-typeahead-search>
+						</ng-template>
+					</ng-container>
 
 					<ng-template #mainMotivoConsulta>
 						<form [formGroup]="motivoNuevaConsultaService.getForm()"
@@ -77,7 +88,7 @@
 
 				<ng-template #problemaForm>
 					<form [formGroup]="ambulatoryConsultationProblemsService.getForm()"
-						(ngSubmit)="this.readOnlyProblema ? this.editProblema(): ambulatoryConsultationProblemsService.addToList(ffIsOn)">
+						(ngSubmit)="this.readOnlyProblema ? this.editProblema(): ambulatoryConsultationProblemsService.addToList(reportFFIsOn)">
 
 						<mat-form-field appearance="outline">
 							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'">
