tg-6758 Modificar e integrar HTML del componente de diagnósticos

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/diagnosticos/diagnosticos.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/diagnosticos/diagnosticos.component.scss
@@ -5,3 +5,29 @@ mat-form-field {
 .margin-bottom {
 	margin-bottom: 15px;
 }
+
+.label {
+	margin-top: 10px;
+	border-radius: 6px;
+	padding: 4px 15px;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 19px;
+	width: 170px;
+	text-align: center;
+}
+.main-diagnosis-label {
+	padding-top: 5px;
+	background-color: #E0EEF7;
+	color: #2687C5;
+}
+
+.other-diagnoses-label {
+	padding-top: 5px;
+	background-color: #F8F8F8;
+	color: #929292;
+}
+
+.diagnoses-action-button {
+	font-size: 16px;
+}
