tg-6782 [FE] Agregar alternativa typeahead para búsqueda de alergias en consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -408,10 +408,23 @@
 		<div id="alergias">
 			<app-new-document-section sectionTitle="ambulatoria.paciente.nueva-consulta.alergias.TITLE">
 				<ng-container concept-form>
-					<app-concepts-search *ngIf="!alergiasNuevaConsultaService.getSnomedConcept() else alergiasForm"
-						[label]="'ambulatoria.paciente.nueva-consulta.alergias.ALLERGY'"
-						(search)="alergiasNuevaConsultaService.openSearchDialog($event)">
-					</app-concepts-search>
+
+					<ng-container *ngIf="!alergiasNuevaConsultaService.getSnomedConcept() else alergiasForm">
+						<app-concepts-search
+							*ngIf="!searchConceptsLocallyFFIsOn else alergiaTypeaheadSearch"
+							[label]="'ambulatoria.paciente.nueva-consulta.alergias.ALLERGY'"
+							(search)="alergiasNuevaConsultaService.openSearchDialog($event)">
+						</app-concepts-search>
+
+						<ng-template #alergiaTypeaheadSearch>
+							<app-concept-typeahead-search
+								[ecl]="alergiasNuevaConsultaService.getECL()"
+								[placeholder]="'ambulatoria.paciente.nueva-consulta.alergias.SEARCH_PLACEHOLDER'"
+								(conceptSelected)="alergiasNuevaConsultaService.setConcept($event)">
+							</app-concept-typeahead-search>
+						</ng-template>
+					</ng-container>
+
 					<ng-template #alergiasForm>
 						<form [formGroup]="alergiasNuevaConsultaService.getForm()"
 							(ngSubmit)="alergiasNuevaConsultaService.addToList()">
