tg-6812 Integración de diálogo de edición de diagnósticos

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/elemento-diagnostico/elemento-diagnostico.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/elemento-diagnostico/elemento-diagnostico.component.html
@@ -5,7 +5,7 @@
 	</div>
 	<span>Activo</span>
 	<span>{{ diagnosis.presumptive ? 'Presuntivo' : 'Confirmado' }}</span>
-	<button mat-icon-button color="primary">
+	<button mat-icon-button color="primary" (click)="openDiagnosisEditionDialog()">
         <mat-icon>edit</mat-icon>
       </button>
 </div>
