--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
@@ -1,18 +1,8 @@
 <mat-list content>
 	<mat-list-item id="bed">
 		<div class="flex-container">
-			<mat-icon color="primary" mat-list-icon [inline]="true">local_hospital</mat-icon>
-			<span class="mat-body-2">
-				{{ internmentEpisode?.episodeSpecialtyName }}
-			</span>
-		</div>
-	</mat-list-item>
-
-	<mat-divider inset></mat-divider>
-
-	<mat-list-item id="bed">
-		<div class="flex-container">
-			<mat-icon color="primary" mat-list-icon fontSet="material-icons-outlined" [inline]="true">meeting_room</mat-icon>
+			<mat-icon color="primary" mat-list-icon fontSet="material-icons-outlined" [inline]="true">meeting_room
+			</mat-icon>
 			<span class="mat-body-2">{{ internmentEpisode?.roomNumber }}</span>
 			<mat-icon color="primary" mat-list-icon [inline]="true">single_bed</mat-icon>
 			<span class="mat-body-2">{{ internmentEpisode?.bedNumber }} </span>
