--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -396,7 +396,7 @@
 						</mat-select>
 						<button id="clear-occupation" type="button" mat-button *ngIf="form.controls.occupationId.value"
 							matSuffix color="warn" mat-icon-button
-							(click)="form.controls.occupationId.reset(); $event.stopPropagation()">
+							(click)="form.controls.occupationId.reset(); $event.stopPropagation(); currentOccupationDescription = ''">
 							<mat-icon>close</mat-icon>
 						</button>
 					</mat-form-field>
@@ -415,7 +415,7 @@
 						</mat-select>
 						<button id="clear-educationLevel" type="button" mat-button
 							*ngIf="form.controls.educationLevelId.value" matSuffix color="warn" mat-icon-button
-							(click)="form.controls.educationLevelId.reset(); $event.stopPropagation()">
+							(click)="form.controls.educationLevelId.reset(); $event.stopPropagation(); currentEducationLevelDescription = ''">
 							<mat-icon>close</mat-icon>
 						</button>
 					</mat-form-field>
