tg-6838. [FE] Mock de datos para previsualizar coberturas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -70,11 +70,21 @@
 						</div>
 					</div>
 					<mat-divider class="header-divider" [vertical]="true"></mat-divider>
-					<app-medical-coverage-summary-view
-						*ngIf="internmentEpisodeProcess?.id && internmentEpisodeProcess?.inProgress"
-						[title]="'ambulatoria.paciente.card.INTERNMENT_COVERAGE_TITLE'"
-						[patientCoverageInfo]="internmentEpisodeCoverageInfo">
-					</app-medical-coverage-summary-view>
+
+					<ng-container *ngIf="appointmentConfirmedCoverageInfo else internmentCovarage">
+						<app-medical-coverage-summary-view
+							[title]="'ambulatoria.paciente.card.APPOINTMENT_COVERAGE_TITLE'"
+							[patientCoverageInfo]="appointmentConfirmedCoverageInfo">
+						</app-medical-coverage-summary-view>
+					</ng-container>
+					<ng-template #internmentCovarage>
+						<app-medical-coverage-summary-view
+							*ngIf="internmentEpisodeProcess?.id && internmentEpisodeProcess?.inProgress"
+							[title]="'ambulatoria.paciente.card.INTERNMENT_COVERAGE_TITLE'"
+							[patientCoverageInfo]="internmentEpisodeCoverageInfo">
+						</app-medical-coverage-summary-view>
+					</ng-template>
+
 				</div>
 
 			</div>
